--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nextjsbackend",
   "version": "1.0.0",
   "description": "web3 db ",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,8 +13,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "ethers": "^5.7.2",
     "express": "^4.19.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "stripe": "^16.8.0"
   }
 }
