--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjsbackend",
   "version": "1.0.0",
-  "description": "web3 db ",
+  "description": "web 3 intergrated in web 2 ",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ethers": "^5.7.2",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "stripe": "^16.8.0"
+  },
+  "devDependencies": {
+    "hardhat": "^2.22.8"
   }
 }
